test/compile_errors/err_concat_non_str_lhs.w
//! expect-check-fail: left operand of ++ must be str
fn main:
    let s = 42 ++ " hello"
    print(s)
